--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <script src="app.js"></script>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
-    <div ng-repeat="post in posts">
-      {{post}}
+    <div ng-repeat="post in posts | orderBy: '-upvotes'">
+      {{post.title}} - upvotes: {{post.upvotes}}
     </div>
+
     <div>
       {{test}}
     </div>
