--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div>
       {{test}}
     </div>
-    <button ng-click="addPost()">Post</button>
+    <form ng-submit="addPost()">
+      <input type="text" ng-model="title"></input>
+      <button type="submit">Post</button>
+    </form>
   </body>
 </html>
