--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <script src="app.js"></script>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
-    <div ng-repeat="post in posts | orderBy: '-upvotes'">
+    <!-- <div ng-repeat="post in posts | orderBy: '-upvotes'">
       <span ng-click="incrementUpvotes(post)">^</span>
       {{post.title}} - upvotes: {{post.upvotes}}
+    </div> -->
+    <div ng-repeat="post in posts | orderBy:'-upvotes'">
+      <span ng-click="incrementUpvotes(post)">^</span>
+      <a ng-show="post.link" href="{{post.link}}">
+        {{post.title}}
+      </a>
+      <!-- figure out why you would hide post.link here -->
+      <span ng-hide="post.link">
+        {{post.title}}
+      </span>
+      - upvotes: {{post.upvotes}}
     </div>
 
     <div>
       {{test}}
     </div>
     <form ng-submit="addPost()">
-      <input type="text" ng-model="title"></input>
+      <input type="text" placeholder="Title" ng-model="title"></input>
+      <br>
+      <input type="text" placeholder="Link" ng-model="link"></input>
+      <br>
       <button type="submit">Post</button>
     </form>
   </body>
