--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
   <script src="app.js"></script>
   <style>
   .glyphicon-thumbs-up {
@@ -16,6 +17,7 @@
 <body ng-app="flapperNews" ng-controller="MainCtrl">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <ui-view></ui-view>
 
       <div class="page-header">
         <h1>Flapper News</h1>
@@ -49,6 +51,14 @@
 
     </div>
   </div>
+
+  <script type="text/ng-template" id="/home.html">
+  <div class="page-header">
+  <h1>Flapper News</h1>
+  </div>
+
+  <!-- rest of template -->
+  </script>
 </body>
 
 </html>
